[package]
name = "tasking-druid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
serde = { version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
